# EDA-ASM

./: .gitignore  CLAUDE.md  README.md  env.yaml  logfile  pyproject.toml
ADF_250/: MANIFEST.md
ADF_500/: README.md
V1/: V1_Claisen_ASR_EDA_Spec_v1.md  substrates.csv
Validate/: manifest.csv  run_summary.txt  validate_asr.py
comparison/: README.md  REPORT.md
configs/: asr_v1.yaml  asr_v1_maceoff.yaml  asr_v1_maceoff_delta_n250.yaml  asr_v1_maceoff_large_n250.yaml  asr_v1_maceoff_n235.yaml  asr_v1_maceoff_n250.yaml  asr_v1_maceoff_rtsp_n250.yaml  asr_v1_n235.yaml  fragment_partitioning.yaml  phase1.yaml  seed_selection.yaml
fix_fail_19/: adf_runner.py  config.py  group_a_reendpoint.py  group_b_spinsweep.py  group_c_relax.py  run_all.py  run_group_lowload.sh  run_under_amspython.py  triage.py
labels/: README.md  adf_vs_orca_comparison.parquet  adf_vs_orca_full_comparison.parquet
m1/: README.md
m2/: README.md
m3/: README.md
pipeline_rebuild/: stage1_download.sh  stage1b_rgd1.sh  stage1c_qmrxn20.sh  stage1d_qmrxn20_fixed.sh  stage2_mace.sh  stage2_mace_features.py  stage3.sh  stage3_bundles_and_splits.py  stage4_setup_and_smoke.sh
reports/: dataset_overview.txt  molecule_count_matrix.txt  reaction_categories.txt  stage5a_500_sample.xlsx  stage5a_methodology.md
scripts/: README_frag_review_to_orca.md  add_R_to_replacements.py  adf_queue_feeder.py  aggregate_v3.py  audit_2frag_all_datasets.py  audit_2frag_all_datasets.sh  build_bundles_v7.py  build_bundles_v7.sh  build_static_viewer.py  categorize_reactions.py  check_stratification.py  cpu1_mpi_smoke.sh  (+80 more)
(+10439 files in other folders)
