[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-asm-prediction"
version = "0.0.1"
description = "EDA/ASM-based activation energy prediction (Stage 5-6 of E_a pipeline)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "yeseolele", email = "yeseolele@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "ase",
    "pymatgen",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
gpr = ["gpytorch", "torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
